crates/tlang_parser/tests/snapshots/parser_enum__enum_extraction.snap
---
source: crates/tlang_parser/tests/parser_enum.rs
expression: "parse!\n(indoc!\n{\"\n        enum Option {\n            Some(value),\n            None,\n        }\n\n        fn unwrap(Option::None) { panic(\\\"Cannot unwrap None\\\") }\n        fn unwrap(Option::Some(value)) { value }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: EnumDeclaration(EnumDeclaration(
        name: Ident(
          name: "Option",
          span: Span(
            start: LineColumn(
              line: 0,
              column: 5,
            ),
            end: LineColumn(
              line: 0,
              column: 11,
            ),
          ),
        ),
        variants: [
          EnumVariant(
            id: 5,
            name: Ident(
              name: "Some",
              span: Span(
                start: LineColumn(
                  line: 1,
                  column: 5,
                ),
                end: LineColumn(
                  line: 1,
                  column: 9,
                ),
              ),
            ),
            parameters: [
              StructField(
                id: 4,
                name: Ident(
                  name: "0",
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                ty: Ty(
                  id: 3,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "value",
                        span: Span(
                          start: LineColumn(
                            line: 1,
                            column: 10,
                          ),
                          end: LineColumn(
                            line: 1,
                            column: 15,
                          ),
                        ),
                      ),
                    ],
                    res: Res(
                      node_id: None,
                    ),
                    span: Span(
                      start: LineColumn(
                        line: 1,
                        column: 10,
                      ),
                      end: LineColumn(
                        line: 1,
                        column: 15,
                      ),
                    ),
                  )),
                  parameters: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ),
            ],
            span: Span(
              start: LineColumn(
                line: 1,
                column: 5,
              ),
              end: LineColumn(
                line: 1,
                column: 16,
              ),
            ),
          ),
          EnumVariant(
            id: 6,
            name: Ident(
              name: "None",
              span: Span(
                start: LineColumn(
                  line: 2,
                  column: 5,
                ),
                end: LineColumn(
                  line: 2,
                  column: 9,
                ),
              ),
            ),
            parameters: [],
            span: Span(
              start: LineColumn(
                line: 2,
                column: 5,
              ),
              end: LineColumn(
                line: 2,
                column: 9,
              ),
            ),
          ),
        ],
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 3,
          column: 2,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
    Stmt(
      id: 23,
      kind: FunctionDeclarations([
        FunctionDeclaration(
          id: 15,
          name: Expr(
            id: 8,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "unwrap",
                  span: Span(
                    start: LineColumn(
                      line: 5,
                      column: 4,
                    ),
                    end: LineColumn(
                      line: 5,
                      column: 10,
                    ),
                  ),
                ),
              ],
              res: Res(
                node_id: None,
              ),
              span: Span(
                start: LineColumn(
                  line: 5,
                  column: 4,
                ),
                end: LineColumn(
                  line: 5,
                  column: 10,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 5,
                column: 4,
              ),
              end: LineColumn(
                line: 5,
                column: 10,
              ),
            ),
          ),
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 9,
                kind: Enum(EnumPattern(
                  path: Path(
                    segments: [
                      Ident(
                        name: "Option",
                        span: Span(
                          start: LineColumn(
                            line: 5,
                            column: 11,
                          ),
                          end: LineColumn(
                            line: 5,
                            column: 17,
                          ),
                        ),
                      ),
                      Ident(
                        name: "None",
                        span: Span(
                          start: LineColumn(
                            line: 5,
                            column: 19,
                          ),
                          end: LineColumn(
                            line: 5,
                            column: 23,
                          ),
                        ),
                      ),
                    ],
                    res: Res(
                      node_id: None,
                    ),
                    span: Span(
                      start: LineColumn(
                        line: 5,
                        column: 11,
                      ),
                      end: LineColumn(
                        line: 5,
                        column: 23,
                      ),
                    ),
                  ),
                  elements: [],
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 5,
                    column: 11,
                  ),
                  end: LineColumn(
                    line: 5,
                    column: 23,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: LineColumn(
                  line: 5,
                  column: 11,
                ),
                end: LineColumn(
                  line: 5,
                  column: 23,
                ),
              ),
            ),
          ],
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 14,
            statements: [],
            expression: Some(Expr(
              id: 13,
              kind: Call(CallExpression(
                callee: Expr(
                  id: 11,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "panic",
                        span: Span(
                          start: LineColumn(
                            line: 5,
                            column: 27,
                          ),
                          end: LineColumn(
                            line: 5,
                            column: 32,
                          ),
                        ),
                      ),
                    ],
                    res: Res(
                      node_id: None,
                    ),
                    span: Span(
                      start: LineColumn(
                        line: 5,
                        column: 27,
                      ),
                      end: LineColumn(
                        line: 5,
                        column: 32,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 5,
                      column: 27,
                    ),
                    end: LineColumn(
                      line: 5,
                      column: 32,
                    ),
                  ),
                ),
                arguments: [
                  Expr(
                    id: 12,
                    kind: Literal(String("Cannot unwrap None")),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: LineColumn(
                        line: 5,
                        column: 33,
                      ),
                      end: LineColumn(
                        line: 5,
                        column: 53,
                      ),
                    ),
                  ),
                ],
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 5,
                  column: 27,
                ),
                end: LineColumn(
                  line: 5,
                  column: 54,
                ),
              ),
            )),
            span: Span(
              start: LineColumn(
                line: 5,
                column: 25,
              ),
              end: LineColumn(
                line: 5,
                column: 56,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 5,
              column: 1,
            ),
            end: LineColumn(
              line: 5,
              column: 56,
            ),
          ),
        ),
        FunctionDeclaration(
          id: 22,
          name: Expr(
            id: 16,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "unwrap",
                  span: Span(
                    start: LineColumn(
                      line: 6,
                      column: 4,
                    ),
                    end: LineColumn(
                      line: 6,
                      column: 10,
                    ),
                  ),
                ),
              ],
              res: Res(
                node_id: None,
              ),
              span: Span(
                start: LineColumn(
                  line: 6,
                  column: 4,
                ),
                end: LineColumn(
                  line: 6,
                  column: 10,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 6,
                column: 4,
              ),
              end: LineColumn(
                line: 6,
                column: 10,
              ),
            ),
          ),
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 18,
                kind: Enum(EnumPattern(
                  path: Path(
                    segments: [
                      Ident(
                        name: "Option",
                        span: Span(
                          start: LineColumn(
                            line: 6,
                            column: 11,
                          ),
                          end: LineColumn(
                            line: 6,
                            column: 17,
                          ),
                        ),
                      ),
                      Ident(
                        name: "Some",
                        span: Span(
                          start: LineColumn(
                            line: 6,
                            column: 19,
                          ),
                          end: LineColumn(
                            line: 6,
                            column: 23,
                          ),
                        ),
                      ),
                    ],
                    res: Res(
                      node_id: None,
                    ),
                    span: Span(
                      start: LineColumn(
                        line: 6,
                        column: 11,
                      ),
                      end: LineColumn(
                        line: 6,
                        column: 23,
                      ),
                    ),
                  ),
                  elements: [
                    (Ident(
                      name: "0",
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 0,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 0,
                        ),
                      ),
                    ), Pat(
                      id: 17,
                      kind: Identifier(Ident(
                        name: "value",
                        span: Span(
                          start: LineColumn(
                            line: 6,
                            column: 24,
                          ),
                          end: LineColumn(
                            line: 6,
                            column: 29,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 6,
                          column: 24,
                        ),
                        end: LineColumn(
                          line: 6,
                          column: 29,
                        ),
                      ),
                    )),
                  ],
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 6,
                    column: 11,
                  ),
                  end: LineColumn(
                    line: 6,
                    column: 30,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: LineColumn(
                  line: 6,
                  column: 11,
                ),
                end: LineColumn(
                  line: 6,
                  column: 30,
                ),
              ),
            ),
          ],
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 21,
            statements: [],
            expression: Some(Expr(
              id: 20,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "value",
                    span: Span(
                      start: LineColumn(
                        line: 6,
                        column: 34,
                      ),
                      end: LineColumn(
                        line: 6,
                        column: 39,
                      ),
                    ),
                  ),
                ],
                res: Res(
                  node_id: None,
                ),
                span: Span(
                  start: LineColumn(
                    line: 6,
                    column: 34,
                  ),
                  end: LineColumn(
                    line: 6,
                    column: 39,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 6,
                  column: 34,
                ),
                end: LineColumn(
                  line: 6,
                  column: 39,
                ),
              ),
            )),
            span: Span(
              start: LineColumn(
                line: 6,
                column: 32,
              ),
              end: LineColumn(
                line: 6,
                column: 41,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 6,
              column: 1,
            ),
            end: LineColumn(
              line: 6,
              column: 41,
            ),
          ),
        ),
      ]),
      span: Span(
        start: LineColumn(
          line: 5,
          column: 1,
        ),
        end: LineColumn(
          line: 6,
          column: 41,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 6,
      column: 41,
    ),
  ),
)
